more on rubincanm's ereader

--- a/reading-platforms.bib
+++ b/reading-platforms.bib
@@ -41,10 +41,11 @@
 }
 
 @book{rankin_peoples_2018,
-	title = {A people's history of computing in the {United} {States}},
+	address = {Cambridge, MA},
+	title = {A {People}'s {History} of {Computing} in the {United} {States}},
 	isbn = {978-0-674-97097-7},
-	abstract = {Does Silicon Valley deserve the credit it gets for digital creativity and social media? Joy Lisi Rankin questions this triumphalism by revisiting a pre-PC world where schools were not the last stop for mature consumer technologies but flourishing sites of innovative collaboration. A People's History of Computing in the United States reveals a forgotten time when students taught computers, rather than the other way around, and visionaries dreamed of networked access for all. The invention of the personal computer undoubtedly liberated users from corporate mainframes and brought computing into homes. But throughout the 1960s and 1970s a diverse group of teachers and students working together on academic computing systems conducted many of the activities we now recognize as personal and social computing. Their networks were centered in New Hampshire, Minnesota, and Illinois, but they connected far-flung users. Rankin draws on detailed records to explore how users exchanged messages, programmed music and poems, fostered communities, and developed computer games, including The Oregon Trail. No less than the male inventors, garage hobbyists, and eccentric billionaires of Palo Alto, these unsung pioneers helped shape our digital world. By imagining computing as an interactive commons, the early denizens of the digital realm seeded today's debate about whether the internet should be a public utility and laid the groundwork for national and international debates over net neutrality. Rankin offers a radical precedent for a more democratic digital culture, and new models for the next generation of activists, educators, coders, and makers....},
 	language = {English},
+	publisher = {Harvard University Press},
 	author = {Rankin, Joy Lisi},
 	year = {2018},
 	note = {OCLC: 1060991093}
@@ -59,4 +60,43 @@
 	month = may,
 	year = {1962},
 	pages = {4}
+}
+
+@patent{rubincam_electronic_1979,
+	title = {Electronic book},
+	url = {https://patents.google.com/patent/US4159417A/en?q=%22electronic+book%22&country=US&before=priority:19800101&num=100},
+	nationality = {US},
+	assignee = {Rubincam David P},
+	number = {US4159417A},
+	urldate = {2019-05-26},
+	author = {Rubincam, David P.},
+	month = jun,
+	year = {1979},
+	keywords = {information, apparatus, container, display, memory},
+	file = {Fulltext PDF:/home/denten/Zotero/storage/F42B95Z4/Rubincam - 1979 - Electronic book.pdf:application/pdf}
+}
+
+@book{lubbock_craft_1921,
+	address = {London, UK},
+	title = {The {Craft} of {Fiction}},
+	language = {eng},
+	publisher = {Jonathan Cape},
+	author = {Lubbock, Percy},
+	year = {1921},
+	keywords = {West Bengal Public Library}
+}
+
+@patent{james_automatic_1966,
+	title = {Automatic searching film reader},
+	url = {https://patents.google.com/patent/US3290987A/en?oq=3290987},
+	nationality = {US},
+	language = {en},
+	assignee = {Eastman Kodak Co},
+	number = {US3290987A},
+	urldate = {2019-05-28},
+	author = {James, Claire L. and Nelson, Raymond L.},
+	month = dec,
+	year = {1966},
+	keywords = {coding, film, means, photocell, position},
+	file = {Fulltext PDF:/home/denten/Zotero/storage/7ZHHJ3VW/James and Nelson - 1966 - Automatic searching film reader.pdf:application/pdf}
 }
