--- a/reading-platforms.bib
+++ b/reading-platforms.bib
@@ -100,3 +100,91 @@
 	keywords = {coding, film, means, photocell, position},
 	file = {Fulltext PDF:/home/denten/Zotero/storage/7ZHHJ3VW/James and Nelson - 1966 - Automatic searching film reader.pdf:application/pdf}
 }
+
+@book{brown_readies_1930,
+	address = {Bad Ems, DE},
+	title = {The {Readies}},
+	language = {English},
+	publisher = {Roving Eye Press},
+	author = {Brown, Bob},
+	year = {1930},
+	note = {OCLC: 5915558}
+}
+
+@article{pressman_machine_2011,
+	title = {Machine {Poetics} and {Reading} {Machines}: {William} {Poundstone}'s {Electronic} {Literature} and {Bob} {Brown}'s {Readies}},
+	volume = {23},
+	issn = {0896-7148},
+	shorttitle = {Machine {Poetics} and {Reading} {Machines}},
+	url = {https://www.jstor.org/stable/41329614},
+	number = {4},
+	urldate = {2019-05-30},
+	journal = {American Literary History},
+	author = {Pressman, Jessica},
+	year = {2011},
+	pages = {767--794},
+	file = {JSTOR Full Text PDF:/home/denten/Zotero/storage/ASD5FZX4/Pressman - 2011 - Machine Poetics and Reading Machines William Poun.pdf:application/pdf}
+}
+
+@article{north_words_2002,
+	title = {Words in {Motion}: {The} {Movies}, the {Readies}, and the "{Revolution} of the {Word}"},
+	volume = {9},
+	issn = {1080-6601},
+	shorttitle = {Words in {Motion}},
+	url = {http://muse.jhu.edu/article/23490},
+	doi = {10.1353/mod.2002.0033},
+	language = {en},
+	number = {2},
+	urldate = {2019-05-30},
+	journal = {Modernism/modernity},
+	author = {North, Michael},
+	month = apr,
+	year = {2002},
+	pages = {205--223},
+	file = {Full Text PDF:/home/denten/Zotero/storage/P9T7URNI/North - 2002 - Words in Motion The Movies, the Readies, and the .pdf:application/pdf}
+}
+
+@article{stephens_bob_2011,
+	title = {Bob {Brown}, ““{Inforg}””: {The} ““{Readies}”” at the {Limits} of {Modernist} {Cosmopolitanism}},
+	volume = {35},
+	issn = {0022-281X},
+	shorttitle = {Bob {Brown}, ““{Inforg}””},
+	url = {https://www.jstor.org/stable/10.2979/jmodelite.35.1.143},
+	doi = {10.2979/jmodelite.35.1.143},
+	abstract = {Bob Brown's 1930––1931 reading machine hyperbolically attempts to eradicate the difference between human and book, as well as between local reading and global reading. Brown could thus be described somewhat anachronistically as an example of what Luciano Floridi refers to as an ““inforg,”” an ““interconnected organism . . . sharing with biological agents and engineered artifacts a global environment ultimately made of information, the infosphere.”” Brown's reading machine, I suggest most provocatively, fashions readers and writers as global word processors avant le lettre, or rather post le lettre. The reading machine implies that electronically transmitted language will alter the nature of literary form; at the same time, it parodies the Americanization of the wor(l)d brought about by new technologies of communication.},
+	number = {1},
+	urldate = {2019-05-30},
+	journal = {Journal of Modern Literature},
+	author = {Stephens, Paul},
+	year = {2011},
+	pages = {143--164},
+	file = {JSTOR Full Text PDF:/home/denten/Zotero/storage/7PEJS88C/Stephens - 2011 - Bob Brown, ““Inforg”” The ““Readies”” at the Limi.pdf:application/pdf}
+}
+
+@patent{noauthor_reading_1935,
+	title = {Reading machine},
+	url = {https://patents.google.com/patent/US2026330A/en?q=%22reading+machine%22&before=priority:19300101},
+	nationality = {US},
+	language = {en},
+	number = {US2026330A},
+	urldate = {2019-05-30},
+	month = dec,
+	year = {1935},
+	keywords = {means, object, points, rays, scanning},
+	file = {Fulltext PDF:/home/denten/Zotero/storage/DKJ8AYTE/1935 - Reading machine.pdf:application/pdf}
+}
+
+@patent{fiske_reading_1922,
+	title = {Reading machine},
+	url = {https://patents.google.com/patent/US1411008A/en?q=%22reading+machine%22&before=priority:19300101},
+	nationality = {US},
+	language = {en},
+	assignee = {Bradley A Fiske},
+	number = {US1411008A},
+	urldate = {2019-05-30},
+	author = {Fiske, Bradley A.},
+	month = mar,
+	year = {1922},
+	keywords = {lens, magnifying, matter, reading, tape},
+	file = {Fulltext PDF:/home/denten/Zotero/storage/PJU7XERA/Fiske - 1922 - Reading machine.pdf:application/pdf}
+}
