add stuff on guides

--- a/reading-platforms.bib
+++ b/reading-platforms.bib
@@ -188,3 +188,91 @@
 	keywords = {lens, magnifying, matter, reading, tape},
 	file = {Fulltext PDF:/home/denten/Zotero/storage/PJU7XERA/Fiske - 1922 - Reading machine.pdf:application/pdf}
 }
+
+@book{luther_microfilm_1959,
+	address = {Annapolis, MD},
+	title = {Microfilm: {A} {History}, 1839-1900},
+	shorttitle = {Microfilm},
+	url = {https://catalog.hathitrust.org/Record/001758639},
+	urldate = {2019-05-30},
+	publisher = {National Microfilm Association},
+	author = {Luther, Frederic},
+	year = {1959},
+	keywords = {Microfilms.},
+	file = {Luther - 1959 - Microfilm A History, 1839-1900.pdf:/home/denten/Zotero/storage/HI7SM8FC/Luther - 1959 - Microfilm A History, 1839-1900.pdf:application/pdf}
+}
+
+@book{meckler_micropublishing_1982,
+	address = {Westport, CT},
+	title = {Micropublishing: {A} {History} of {Scholarly} {Micropublishing} in {America}, 1938-1980},
+	isbn = {978-0-313-23096-7},
+	shorttitle = {Micropublishing},
+	publisher = {Greenwood Press},
+	author = {Meckler, Alan M.},
+	year = {1982},
+	keywords = {History, Micropublishing, United States},
+	file = {Micropublishing \: a history of scholarly micropublishing in America, 1938-1980 - CLIO:/home/denten/Zotero/storage/QDE3PYJY/SCSB-36305.html:text/html}
+}
+
+@book{veaner_studies_1977,
+	address = {London, UK},
+	title = {Studies in {Micropublishing}, 1853-1976: {Documentary} {Sources}},
+	isbn = {978-0-7201-0726-5 978-0-913672-07-5},
+	shorttitle = {Studies in micropublishing, 1853-1976},
+	language = {English},
+	publisher = {Mansell Information},
+	editor = {Veaner, Allen},
+	year = {1977},
+	note = {OCLC: 16374013}
+}
+
+@misc{noauthor_microscope_1857,
+	address = {Boston, MA},
+	edition = {8th},
+	title = {Microscope},
+	volume = {14},
+	shorttitle = {Encyclopaedia britannica},
+	url = {http://hdl.handle.net/2027/pst.000023779990},
+	journal = {Encyclopaedia Britannica},
+	publisher = {Little, Brown, and Company},
+	year = {1857},
+	pages = {763--806},
+	file = {Encyclopaedia britannica \: or, Dictionary of arts, ... v.14. - Full View | HathiTrust Digital Library | HathiTrust Digital Library:/home/denten/Zotero/storage/YUGTDAD9/pt.html:text/html}
+}
+
+@inproceedings{salomon_using_1989,
+	title = {Using {Guides} to {Explore} {Multimedia} {Databases}},
+	volume = {4},
+	doi = {10.1109/HICSS.1989.48157},
+	abstract = {The design and implementation of a multimedia database is surveyed and an interface technique called guides is presented, which simplifies database access by alleviating the need to construct search queries. The user is given a selection of images of people who embody easily understood points of view. A user can choose a guide as a companion while browsing the database. At each database node the user is provided with the guides next choice and thus can follow the interest path of a certain type of individual. The graphical tools and interface provided to the text, graphics and sound database are presented. The design and functionality of alphabetical and topical indexes, multimedia tours, timelines and animated maps are detailed. Future directions for development are indicated. The concept of guides can be easily generalized and applied to other databases.{\textless}{\textgreater}},
+	booktitle = {Proceedings of the {Twenty}-{Second} {Annual} {Hawaii} {International} {Conference} on {System} {Sciences}. {Volume} {IV}: {Emerging} {Technologies} and {Applications} {Track}},
+	author = {Salomon, Gitta and Oren, Tim and Kreitman, Kristee},
+	month = jan,
+	year = {1989},
+	keywords = {Animation, CD-ROMs, computer graphics, Computer interfaces, database access, database management systems, graphical tools, Graphics, graphics database, guides, Image databases, interest path, Loudspeakers, multimedia databases, Multimedia databases, Optical devices, sound database, user interfaces, User interfaces, Visual databases},
+	pages = {3--12 vol.4},
+	file = {IEEE Xplore Abstract Record:/home/denten/Zotero/storage/TKGAN6WC/48157.html:text/html;IEEE Xplore Full Text PDF:/home/denten/Zotero/storage/HWHLVEFM/Salomon et al. - 1989 - Using guides to explore multimedia databases.pdf:application/pdf}
+}
+
+@phdthesis{laurel_toward_1986,
+	title = {Toward the design of a computer-based interactive fantasy system},
+	url = {https://etd.ohiolink.edu/pg_10?0::NO:10:P10_ACCESSION_NUM:osu1240408469#abstract-files},
+	language = {en},
+	urldate = {2019-05-31},
+	school = {The Ohio State University},
+	author = {Laurel, Brenda Kay},
+	year = {1986},
+	file = {Full Text PDF:/home/denten/Zotero/storage/FVD9Z5DT/Laurel - 1986 - Toward the design of a computer-based interactive .pdf:application/pdf;Snapshot:/home/denten/Zotero/storage/DXYMD3PE/pg_10.html:text/html}
+}
+
+@book{goodman_complete_1988,
+	address = {New York, NY},
+	title = {The {Complete} {Hypercard} {Handbook}},
+	url = {http://archive.org/details/The_Complete_HyperCard_Handbook},
+	language = {eng},
+	urldate = {2019-05-31},
+	publisher = {Bantam Books},
+	author = {Goodman, Danny},
+	year = {1988},
+	keywords = {hypercard}
+}
