update on Laurel

--- a/reading-platforms.bib
+++ b/reading-platforms.bib
@@ -276,3 +276,28 @@
 	year = {1988},
 	keywords = {hypercard}
 }
+
+@book{laurel_computers_1991,
+	address = {Reading, MA},
+	title = {Computers as {Theatre}},
+	isbn = {978-0-201-51048-5},
+	language = {English},
+	publisher = {Addison-Wesley},
+	author = {Laurel, Brenda},
+	year = {1991},
+	note = {OCLC: 797819669}
+}
+
+@incollection{abbe_narrative_1990,
+	address = {Reading, MA},
+	title = {Narrative and {Interface}},
+	isbn = {978-0-201-51797-2},
+	language = {English},
+	booktitle = {The {Art} of {Human}-{Computer} {Interface} {Design}},
+	publisher = {Addison-Wesley},
+	author = {Abbe, Don},
+	editor = {Laurel, Brenda and Mountford, S. Joy},
+	year = {1990},
+	note = {OCLC: 21332677},
+	pages = {383--391}
+}
