finish with paper

--- a/bib.bib
+++ b/bib.bib
@@ -301,3 +301,138 @@
 	note = {OCLC: 21332677},
 	pages = {383--391}
 }
+
+@incollection{marcus_virginia_1996,
+	address = {London},
+	title = {Virginia {Woolf} and the {Hogarth} {Press}},
+	isbn = {978-1-349-24551-2},
+	url = {https://doi.org/10.1007/978-1-349-24551-2_6},
+	abstract = {In her diary entry for Monday, 25 January 1915, her thirty-third birthday, Virginia Woolf, describing her birthday ‘treats’, wrote: I don’t know when I enjoyed a birthday so much – not since I was a child anyhow. Sitting at tea we decided three things: in the first place to take Hogarth [House, Richmond], if we can get it; in the second, to buy a Printing press; in the third to buy a Bull dog, probably called John. I am very much excited at the idea of all three – particularly the press. I was also given a packet of sweets to bring home.},
+	language = {en},
+	urldate = {2019-05-31},
+	booktitle = {Modernist {Writers} and the {Marketplace}},
+	publisher = {Palgrave Macmillan UK},
+	author = {Marcus, Laura},
+	editor = {Willison, Ian and Gould, Warwick and Chernaik, Warren},
+	year = {1996},
+	doi = {10.1007/978-1-349-24551-2_6},
+	keywords = {Book Club, Diary Entry, Jewish Identity, Printing Press, Short Story},
+	pages = {124--150}
+}
+
+@article{storace_woolf_2015,
+	title = {A {Woolf} at the {Hogarth} {Press} {Virginia} {Woolf} and the art of publishing},
+	volume = {26},
+	issn = {09579656},
+	url = {https://ezproxy.cul.columbia.edu/login?qurl=https%3a%2f%2fsearch.ebscohost.com%2flogin.aspx%3fdirect%3dtrue%26db%3dbrb%26AN%3d103361769%26site%3dehost-live%26scope%3dsite},
+	abstract = {Even in an age of self-publishing, we rarely think to equate publishers with authors. However, the Hogarth Press that Leonard and Virginia Woolf set up in the basement of their Richmond home was to become one of the most exciting enterprises in publishing history, bringing together the writing, editing, printing, and design of some of the most innovative books of the first half of the 20th century. This article begins by tracing the growth of the press from a small husband-wife project into the quirky publishing house that was to publish the likes of T. S. Eliot, Katherine Mansfield, and Sigmund Freud. It then looks at Virginia's role at the press and argues that her experience of setting type and being exposed to works such as Eliot's The Wasteland gave her a fresh outlook on her own writing and pushed her to experiment further with form. The paper also proposes that the Hogarth Press gave Woolf the best of all worlds: she not only got to publish her own writing, but was also involved in editing, proofing, and physically setting the type for her own work, and was able to take decisions about paratextual material. This was a remarkably rare experience for any author at the time - least of all a woman - and played an important part in the shaping of Woolf's aesthetic as a whole.},
+	number = {1},
+	urldate = {2019-05-31},
+	journal = {LOGOS: The Journal of the World Book Community},
+	author = {Storace, Katryna},
+	month = mar,
+	year = {2015},
+	keywords = {HOGARTH Press (Company), PUBLISHERS \& publishing, SELF-publishing, WOOLF, Virginia, 1882-1941},
+	pages = {40},
+	file = {EBSCO Full Text:/home/denten/Zotero/storage/JDLU88E4/Storace - 2015 - A Woolf at the Hogarth Press Virginia Woolf and th.pdf:application/pdf}
+}
+
+@misc{noauthor_about_nodate,
+	title = {About {Feedbooks}},
+	url = {http://www.feedbooks.com/about},
+	urldate = {2019-05-31},
+	file = {About Feedbooks:/home/denten/Zotero/storage/EZ8DZN2H/about.html:text/html}
+}
+
+@misc{noauthor_feedbooks_nodate,
+	title = {Feedbooks, {SAS}: {Private} {Company} {Information} - {Bloomberg}},
+	url = {https://www.bloomberg.com/research/stocks/private/snapshot.asp?privcapId=182765564},
+	urldate = {2019-05-31},
+	file = {Feedbooks, SAS\: Private Company Information - Bloomberg:/home/denten/Zotero/storage/ENE6PJ8F/snapshot.html:text/html}
+}
+
+@misc{noauthor_feedbooks_nodate-1,
+	title = {Feedbooks {Company} {Profile}: {Valuation} \& {Investors} {\textbar} {PitchBook}},
+	shorttitle = {Feedbooks {Company} {Profile}},
+	url = {https://pitchbook.com/profiles/company/89451-64},
+	abstract = {Information on valuation, funding, cap tables, investors, and executives for Feedbooks. Use the PitchBook Platform to explore the full profile.},
+	language = {en},
+	urldate = {2019-05-31},
+	file = {Snapshot:/home/denten/Zotero/storage/R3YNGVB3/89451-64.html:text/html}
+}
+
+@misc{noauthor_open_2010,
+	title = {Open {Publication} {Structure} ({OPS}) 2.0.1 v1.0},
+	url = {http://www.idpf.org/epub/20/spec/OPS_2.0.1_draft.htm},
+	urldate = {2019-05-31},
+	month = sep,
+	year = {2010},
+	file = {Open Publication Structure (OPS) 2.0.1 v1.0:/home/denten/Zotero/storage/XWDI5G63/OPS_2.0.1_draft.html:text/html}
+}
+
+@misc{noauthor_amazon.com_nodate,
+	title = {Amazon.com {Help}: {About} {Amazon} {Follow}},
+	url = {https://www.amazon.com/gp/help/customer/display.html?nodeId=201813230},
+	urldate = {2019-05-31},
+	file = {Amazon.com Help\: About Amazon Follow:/home/denten/Zotero/storage/KYAXZD6K/display.html:text/html}
+}
+
+@misc{noauthor_17_nodate,
+	title = {17 {U}.{S}. {Code} § 1201 - {Circumvention} of copyright protection systems},
+	url = {https://www.law.cornell.edu/uscode/text/17/1201},
+	language = {en},
+	urldate = {2019-05-31},
+	journal = {LII / Legal Information Institute},
+	file = {Snapshot:/home/denten/Zotero/storage/GRDH99UJ/1201.html:text/html}
+}
+
+@article{drucker_reading_2013,
+	title = {Reading {Interface}},
+	volume = {128},
+	issn = {0030-8129},
+	url = {https://www.jstor.org/stable/23489280},
+	number = {1},
+	urldate = {2019-06-01},
+	journal = {PMLA},
+	author = {Drucker, Johanna},
+	year = {2013},
+	pages = {213--220}
+}
+
+@article{noauthor_introduction_1998,
+	title = {An {Introduction} to "{Book} {History}"},
+	volume = {1},
+	issn = {1098-7371},
+	url = {https://www.jstor.org/stable/30227279},
+	urldate = {2019-06-01},
+	journal = {Book History},
+	year = {1998},
+	pages = {ix--xi}
+}
+
+@article{ramirez_creating_2013,
+	title = {Creating a false memory in the hippocampus},
+	volume = {341},
+	issn = {1095-9203},
+	doi = {10.1126/science.1239073},
+	abstract = {Memories can be unreliable. We created a false memory in mice by optogenetically manipulating memory engram-bearing cells in the hippocampus. Dentate gyrus (DG) or CA1 neurons activated by exposure to a particular context were labeled with channelrhodopsin-2. These neurons were later optically reactivated during fear conditioning in a different context. The DG experimental group showed increased freezing in the original context, in which a foot shock was never delivered. The recall of this false memory was context-specific, activated similar downstream regions engaged during natural fear memory recall, and was also capable of driving an active fear response. Our data demonstrate that it is possible to generate an internally represented and behaviorally expressed fear memory via artificial means.},
+	language = {eng},
+	number = {6144},
+	journal = {Science (New York, N.Y.)},
+	author = {Ramirez, Steve and Liu, Xu and Lin, Pei-Ann and Suh, Junghyup and Pignatelli, Michele and Redondo, Roger L. and Ryan, Tomás J. and Tonegawa, Susumu},
+	month = jul,
+	year = {2013},
+	pmid = {23888038},
+	keywords = {Amygdala, Animals, Association, CA1 Region, Hippocampal, Channelrhodopsins, Conditioning (Psychology), Dentate Gyrus, Dependovirus, Doxycycline, Fear, Genes, fos, Light, Memory, Mental Recall, Mice, Mice, Inbred C57BL, Mice, Transgenic, Neurons, Optogenetics},
+	pages = {387--391}
+}
+
+@book{woolf_lighthouse_1927,
+	address = {New York, NY},
+	title = {The {Lighthouse}},
+	language = {English},
+	publisher = {Harcourt, Brace},
+	author = {Woolf, Virginia},
+	year = {1927},
+	note = {OCLC: 870863363}
+}
